chore: add deploy option

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next",
     "dev:reason": "bsb -clean-world -make-world -w",
     "build": "next build && next export -o dist",
-    "deploy": "npm run build && touch dist/.nojekyll && gh-pages -d dist",
+    "deploy": "npm run build && touch dist/.nojekyll && gh-pages -t true -d dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
